@@ -60,10 +60,7 @@ src_filter = +<*> +<../examples/Skeleton>
 [env:lolin32-example-skeleton-esp32https]
 platform = espressif32@>=1.11
 board = lolin32
-lib_deps =
-    ${env.lib_deps}
-    https://github.com/jackjansen/esp32_https_server_compat
-build_flags = -DIOTSA_WITH_ESP32COMPAT -DIOTSA_WITH_HTTPS -DIOTSA_WITHOUT_HTTP
+build_flags = -DIOTSA_WITH_HTTPS -DIOTSA_WITHOUT_HTTP
 debug_tool = minimodule
 upload_protocol = minimodule
 monitor_speed = 115200
